--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -26,18 +26,19 @@
 	.icon-link {
 	color: #888;
 	margin-top: 10px;
+    margin-right: 5px;
 	padding: 8px;
 	}
 
     /* shareing buttons on logo pages */
     .sharelogo {
-        margin: 4px;
+        margin: 6px;
         width: 32px;
     }
 
     /* search buttons */
     .searchlogo {
-        margin: 4px;
+        margin: 6px;
         width: 32px;
     }
 
