html validation cleanup

--- a/www/_includes/google-adsense.html
+++ b/www/_includes/google-adsense.html
@@ -1,4 +1,4 @@
-<script type="text/javascript"><!--
+<script><!--
 google_ad_client = "ca-pub-6975096118196151";
 /* 728x90 for HackerLogos */
 google_ad_slot = "7873816027";
@@ -6,6 +6,4 @@ google_ad_width = 728;
 google_ad_height = 90;
 //-->
 </script>
-<script type="text/javascript"
-src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-</script>
+<script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
