--- a/www/_includes/google-analytics.html
+++ b/www/_includes/google-analytics.html
@@ -1,4 +1,4 @@
-<script type="text/javascript">
+<script>
 
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', '{{site.google_analytics_id}}']);
