--- a/www/_layouts/amp.html
+++ b/www/_layouts/amp.html
@@ -60,6 +60,7 @@
     </div>
     <div class="content">
         <h1>{{page.title}}</h1>
+        {{ content }}
         {% if page.ar21 %}
         <p><amp-img class="logoimage" src="{{page.ar21}}" width="240" height="120"></amp-img></p>
         {% endif %}
