--- a/www/_includes/google-adsense.html
+++ b/www/_includes/google-adsense.html
@@ -1,9 +1,10 @@
-<script><!--
-google_ad_client = "ca-pub-6975096118196151";
-/* 728x90 for HackerLogos */
-google_ad_slot = "7873816027";
-google_ad_width = 728;
-google_ad_height = 90;
-//-->
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Responsive for VectorLogoZone -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6975096118196151"
+     data-ad-slot="1537213079"
+     data-ad-format="auto"></ins>
+<script>
+    (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-<script src="http://pagead2.googlesyndication.com/pagead/show_ads.js"></script>
