--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -48,6 +48,13 @@
 			</div>
 		</div>
 		{% endif %}
+        {% if page.images.size > 0 %}
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                {% include google-adsense.html %}
+            </div>
+        </div>
+        {% endif %}
 		<hr>
 		{% include footer.html %}
 	</div><!--/container-->
