added link to license

--- a/www/_includes/meta-home.html
+++ b/www/_includes/meta-home.html
@@ -3,6 +3,7 @@
 <meta name="alexaVerifyID" content="KaTeke7OayJ23bqjvmj0fVbrwdo" />
 <meta name="yandex-verification" content="5392bc89f76e2ae0" />
 <link rel="prerender" href="/logos/index.html" />
+<link rel="license" href="https://github.com/fileformat/vectorlogozone/blob/gh-pages/LICENSE.txt" />
 <style>
 /* pinterest widget */
 .pin-title { font-size:1em;text-decoration:none;color:#00a}
