fixed html validator warning

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -4,7 +4,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<meta name="theme-color" content="#2c3e50" />
-	<style type="text/css">
+	<style>
 
 	/* faded border around logos in lists */
 	.logo-container img {
