--- a/www/_includes/imagelist.html
+++ b/www/_includes/imagelist.html
@@ -34,7 +34,7 @@
 				(Raster)
 			{% endif %}
 			</td>
-			<td><a href="/util/preview.html?image=/logos/{{page.logohandle}}/{{image}}"><img alt="{{alt_text}}" src="{{image}}" style="height:120px;" /></a></td>
+			<td><a href="/util/preview.html?image=/logos/{{page.logohandle}}/{{image}}" rel="nofollow"><img alt="{{alt_text}}" src="{{image}}" style="height:120px;" /></a></td>
 		</tr>
 {% endfor %}
 	</tbody>
