--- a/www/_layouts/amp.html
+++ b/www/_layouts/amp.html
@@ -39,11 +39,6 @@
             margin-top: 4pt
         }
 
-        .logoimage {
-            box-shadow: 0 0 5px #1d1d1d;
-            border: solid #ccc 1px;
-            margin: 10px;
-        }
         .footer {
             padding: 0 8pt 0 8pt;
         }
@@ -73,7 +68,16 @@
         {{ content }}
 
         {% assign sorted_images = page.images | sort %}{% for image in sorted_images %}
-        <p><amp-img class="logoimage" src="{{image}}" style="max-height: 120px; max-width:240px;"></amp-img></p>
+        {% capture imagetype %}{{image|split:'-'|last|split:'.'|first}}{% endcapture %}
+        {% for standardtype in site.data.imagetype %}
+        {% if standardtype.id == imagetype %}
+        <p><amp-img class="logoimage" src="{{image}}" height="{{standardtype.height}}" width="{{standardtype.width}}" layout="responsive">
+            <noscript>
+                <img src="{{image}}" width="{{standardtype.width}}" height="{{standardtype.height}}" />
+            </noscript>
+        </amp-img></p>
+        {% endif %}
+        {% endfor %}
         {% endfor %}
 
         <amp-ad
@@ -87,7 +91,7 @@
 
     </div>
     <div class="footer">
-        <a href="index.html">Other versions</a>
+        <a href="index.html">View mobile-friendly non-AMP page</a>
     </div>
 </body>
 </html>
