--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -62,14 +62,18 @@
 	<script>if (window.top.location != window.location) { window.top.location.href = document.location.href; }</script>
 	<script src="/js/jquery-2.1.4.js"></script>
 	<script src="/js/bootstrap.js"></script>
-{% include nextprev.html %}
-	{% if prev_page %}<link rel="prev" href="{{prev_page}}" />{% endif %}
-	{% if next_page %}<link rel="next" href="{{next_page}}" />{% endif %}
-	{% if page.url == '/index.html' or page.url == '/' %}{% include meta-home.html %}{% endif %}
-    {% if page.logohandle %}
+{%- include nextprev.html -%}
+	{%- if prev_page -%}
+    <link rel="prev" href="{{prev_page}}" />
+    {%- endif -%}
+	{%- if next_page -%}
+    <link rel="next" href="{{next_page}}" />
+    {%- endif -%}
+	{%- if page.url == '/index.html' or page.url == '/' %}{% include meta-home.html %}{% endif -%}
+    {%- if page.logohandle -%}
     <link rel="canonical" href="{{site.production_url}}/logos/{{page.logohandle}}/index.html" />
-    {% endif %}
-    {% if page.images.size > 0 %}
+    {%- endif -%}
+    {%- if page.images.size > 0 -%}
     <link rel="amphtml" href="{{site.production_url}}/logos/{{page.logohandle}}/index.amp.html" />
 	<meta property="description" content="Vector logos for {{page.title}} in uniform sizes and layouts in the standard .SVG file format">
 
@@ -83,4 +87,4 @@
 	<meta name="twitter:title" content="{{page.title}} Vector (SVG) Logos">
 	<meta name="twitter:description" content="Vector logos for {{page.title}} in uniform sizes and layouts in the standard .SVG file format">
 	<meta name="twitter:image" content="{{site.production_url}}/logos/{{page.logohandle}}/{{page.logohandle}}-card.png">
-	{% endif %}
+	{%- endif -%}
