colors on logo pages

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -56,6 +56,14 @@
 	padding: 4px 4px 0 4px;
 	margin-left: 5px;
 	}
+    .preview-color {
+        height: 30px;
+        width: 45px;
+        display: inline-block;
+        border: 1px solid #a2a2a2;
+        vertical-align: middle;
+        margin-left: 10px;
+    }
 
 	</style>
 	<link rel="shortcut icon" href="/favicon.ico">
