--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -28,10 +28,17 @@
 				{{ content }}
 			</div><!--/col-->
 		</div><!--/row-->
-        {% if page.font %}
+        {%- if page.font -%}
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 {%- include fonts.html -%}
+            </div>
+        </div>
+        {%- endif -%}
+        {%- if page.colors -%}
+        <div class="row">
+            <div class="col-md-10 col-md-offset-1">
+                {%- include colors.html -%}
             </div>
         </div>
         {%- endif -%}
