--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -13,13 +13,19 @@
                 {%- if page.logohandle -%}
 				<div class="pull-right icon-link-header" style="padding-top:20px;">
                     {%- if page.guide %}<a title="Official Guidelines" href="{{ page.guide }}"><i class="fa fa-certificate icon-link"></i></a>{% endif -%}
-					{%- if page.website %}<a title="Website" href="{{ page.website }}"><i class="fa fa-globe icon-link"></i></a>{% endif -%}
+					{%- if page.website %}<a title="Website" href="{{ page.website }}"><i class="fal fa-globe icon-link"></i></a>{% endif -%}
 					{%- if page.blog %}<a title="Blog" href="{{ page.blog }}"><i class="fa fa-rss-square icon-link"></i></a>{% endif -%}
-					{%- if page.facebook %}<a title="Facebook" href="{{ page.facebook }}"><i class="fa fa-facebook icon-link"></i></a>{% endif -%}
-					{%- if page.twitter %}<a title="Twitter" href="https://twitter.com/{{ page.twitter }}"><i class="fa fa-twitter icon-link"></i></a>{% endif -%}
-					{%- if page.github %}<a title="Github" href="https://github.com/{{ page.github }}"><i class="fa fa-github icon-link"></i></a>{% endif -%}
-                    {%- if page.pinterest %}<a title="Pinterest" href="https://www.pinterest.com/{{ page.pinterest }}/"><i class="fa fa-pinterest icon-link"></i></a>{% endif -%}
-					{%- if page.wikipedia %}<a title="Wikipedia" href="{{ page.wikipedia }}"><i class="fa fa-wikipedia-w icon-link"></i></a>{% endif -%}
+					{%- if page.facebook %}<a title="Facebook" rel="nofollow" href="{{ page.facebook }}"><i class="fab fa-facebook-f icon-link"></i></a>{% endif -%}
+                    {%- if page.googleplus %}<a title="GooglePlus" rel="nofollow" href="https://plus.google.com/+{{ page.googleplus }}"><i class="fab fa-google-plus-square icon-link"></i></a>{% endif -%}
+                    {%- if page.instagram %}<a title="Instagram" rel="nofollow" href="https://www.instagram.com/{{ page.instagram }}/"><i class="fab fa-instagram icon-link"></i></a>{% endif -%}
+                    {%- if page.linkedin %}<a title="Linkedin" rel="nofollow" href="{{ page.linkedin }}"><i class="fab fa-linkedin icon-link"></i></a>{% endif -%}
+                    {%- if page.tumbler %}<a title="Tumblr" href="{{ page.tumblr }}"><i class="fab fa-tumblr-square icon-link"></i></a>{% endif -%}
+					{%- if page.twitter %}<a title="Twitter" href="https://twitter.com/{{ page.twitter }}"><i class="fab fa-twitter icon-link"></i></a>{% endif -%}
+					{%- if page.github %}<a title="Github" href="https://github.com/{{ page.github }}"><i class="fab fa-github icon-link"></i></a>{% endif -%}
+                    {%- if page.pinterest %}<a title="Pinterest" href="https://www.pinterest.com/{{ page.pinterest }}/"><i class="fab fa-pinterest icon-link"></i></a>{% endif -%}
+                    {%- if page.reddit %}<a title="Reddit" href="{{ page.reddit }}/"><i class="fab fa-reddit-alien icon-link"></i></a>{% endif -%}
+                    {%- if page.wikipedia %}<a title="Wikipedia" href="{{ page.wikipedia }}"><i class="fab fa-wikipedia-w icon-link"></i></a>{% endif -%}
+                    {%- if page.youtube %}<a title="YouTube" rel="nofollow" href="{{ page.youtube }}"><i class="fab fa-youtube icon-link"></i></a>{% endif -%}
 					{%- if prev_page %}<a class="btn btn-default btn-xs" href="{{prev_page}}" title="Previous set of logos"><i class="fa fa-caret-left"></i> Previous</a>{% endif -%}
 					{%- if next_page %}<a class="btn btn-default btn-xs" href="{{next_page}}" title="Next set of logos">Next <i class="fa fa-caret-right"></i></a>{% endif -%}
 				</div>
@@ -28,53 +34,41 @@
 				{{ content }}
 			</div><!--/col-->
 		</div><!--/row-->
-        {%- if page.font -%}
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                {%- include fonts.html -%}
-            </div>
-        </div>
-        {%- endif -%}
-        {%- if page.colors -%}
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                {%- include colors.html -%}
-            </div>
-        </div>
-        {%- endif -%}
 		{%- if page.images.size > 0 %}{% include imagelist.html %}{% endif -%}
+        {%- if page.colors %}{% include colors.html %}{% endif -%}
+        {%- if page.font %}{% include fonts.html %}{% endif -%}
         {%- if page.logohandle -%}
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 {% include logosearch.html %}
             </div>
         </div>
-        {% endif %}
-        {% if page.images.size > 0 %}
+        {%- endif -%}
+        {%- if page.images.size > 0 -%}
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 				{% include share.html %}
 			</div>
 		</div>
-		{% endif %}
-		{% if page.tags %}
+		{%- endif -%}
+		{%- if page.tags -%}
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1">
 				<p> Tags:{% for tag in page.tags %} <a class="btn btn-default btn-xs" href="/logos/tags.html#{{tag}}">{{site.data.tags[tag].title}}</a>{% endfor %}</p>
 			</div>
 		</div>
-		{% endif %}
-        {% if page.images.size > 0 %}
+		{%- endif -%}
+        {%- if page.images.size > 0 -%}
         <div class="row">
             <div class="col-md-10 col-md-offset-1">
                 {% include google-adsense.html %}
             </div>
         </div>
-        {% endif %}
+        {%- endif -%}
 		<hr>
-		{% include footer.html %}
+		{%- include footer.html -%}
 	</div><!--/container-->
-{% include google-analytics.html %}
-{% include github.html %}
+{%- include google-analytics.html -%}
+{%- include github.html -%}
 </body>
 </html>
