more social media links in metadata

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -1,6 +1,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
-	<link href="/css/font-awesome.css" rel="stylesheet" type="text/css" />
+	<link href="/css/fontawesome-all.css" rel="stylesheet" type="text/css" />
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<meta name="theme-color" content="#2c3e50" />
