rounded corners on color swatch square

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -61,6 +61,7 @@
         width: 45px;
         display: inline-block;
         border: 1px solid #a2a2a2;
+        border-radius: 4px;
         vertical-align: middle;
         margin-left: 10px;
     }
