--- a/www/_includes/nextprev.html
+++ b/www/_includes/nextprev.html
@@ -1,16 +1,18 @@
-{%- if logopage.logohandle -%}
-    {%- assign sorted_pages = site.pages | sort:'sort'- %}
-    {%- for logopage in sorted_pages -%}
-        {%- if logopage.logohandle -%}
-            {%- if get_next -%}
-                {%- assign next_page = logopage.url | append: site.indexpage -%}
-                {%- assign get_next = false -%}
-            {%- endif- %}
-            {%- if page.logohandle == logopage.logohandle -%}
-                {%- assign prev_page = candidate -%}
-                {%- assign get_next = true -%}
+{%- if jekyll.environment == "production" -%}
+    {%- if page.logohandle -%}
+        {%- assign sorted_pages = site.pages | sort:'sort'- %}
+        {%- for logopage in sorted_pages -%}
+            {%- if logopage.logohandle -%}
+                {%- if get_next -%}
+                    {%- assign next_page = logopage.url | append: site.indexpage -%}
+                    {%- assign get_next = false -%}
+                {%- endif- %}
+                {%- if page.logohandle == logopage.logohandle -%}
+                    {%- assign prev_page = candidate -%}
+                    {%- assign get_next = true -%}
+                {%- endif -%}
+                {%- assign candidate = logopage.url | append: site.indexpage -%}
             {%- endif -%}
-            {%- assign candidate = logopage.url | append: site.indexpage -%}
-        {%- endif -%}
-    {%- endfor -%}
+        {%- endfor -%}
+    {%- endif -%}
 {%- endif -%}
