pinterest domain verify

--- a/www/_includes/meta-home.html
+++ b/www/_includes/meta-home.html
@@ -1,6 +1,7 @@
 <meta name="google-site-verification" content="ZrlyEMKE3kUBkn6005c6H7o20-XuHVN2eiPdZRU-k64" />
 <meta name="msvalidate.01" content="E90DBA4A9D3D37F1056E64E5604A7A0D" />
 <meta name="alexaVerifyID" content="KaTeke7OayJ23bqjvmj0fVbrwdo" />
+<meta name="p:domain_verify" content="14ddd451c05dbfaecb9a7ad9505416c9"/>
 <meta name="yandex-verification" content="5392bc89f76e2ae0" />
 <link rel="prerender" href="/logos/index.html" />
 <link rel="license" href="https://github.com/fileformat/vectorlogozone/blob/gh-pages/LICENSE.txt" />
