--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -13,19 +13,19 @@
                 {%- if page.logohandle -%}
 				<div class="pull-right icon-link-header" style="padding-top:20px;">
                     {%- if page.guide %}<a title="Official Guidelines" href="{{ page.guide }}"><i class="fa fa-certificate icon-link"></i></a>{% endif -%}
-					{%- if page.website %}<a title="Website" href="{{ page.website }}"><i class="fal fa-globe icon-link"></i></a>{% endif -%}
-					{%- if page.blog %}<a title="Blog" href="{{ page.blog }}"><i class="fa fa-rss-square icon-link"></i></a>{% endif -%}
-					{%- if page.facebook %}<a title="Facebook" rel="nofollow" href="{{ page.facebook }}"><i class="fab fa-facebook-f icon-link"></i></a>{% endif -%}
-                    {%- if page.googleplus %}<a title="GooglePlus" rel="nofollow" href="https://plus.google.com/+{{ page.googleplus }}"><i class="fab fa-google-plus-square icon-link"></i></a>{% endif -%}
-                    {%- if page.instagram %}<a title="Instagram" rel="nofollow" href="https://www.instagram.com/{{ page.instagram }}/"><i class="fab fa-instagram icon-link"></i></a>{% endif -%}
-                    {%- if page.linkedin %}<a title="Linkedin" rel="nofollow" href="{{ page.linkedin }}"><i class="fab fa-linkedin icon-link"></i></a>{% endif -%}
-                    {%- if page.tumbler %}<a title="Tumblr" href="{{ page.tumblr }}"><i class="fab fa-tumblr-square icon-link"></i></a>{% endif -%}
-					{%- if page.twitter %}<a title="Twitter" href="https://twitter.com/{{ page.twitter }}"><i class="fab fa-twitter icon-link"></i></a>{% endif -%}
+					{%- if page.website %}<a title="Website" href="{{ page.website }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fal fa-globe icon-link"></i></a>{% endif -%}
+					{%- if page.blog %}<a title="Blog" href="{{ page.blog }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fa fa-rss-square icon-link"></i></a>{% endif -%}
+					{%- if page.facebook %}<a title="Facebook" rel="nofollow" href="{{ page.facebook }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-facebook-f icon-link"></i></a>{% endif -%}
+                    {%- if page.googleplus %}<a title="GooglePlus" rel="nofollow" href="https://plus.google.com/+{{ page.googleplus }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-google-plus-square icon-link"></i></a>{% endif -%}
+                    {%- if page.instagram %}<a title="Instagram" rel="nofollow" href="https://www.instagram.com/{{ page.instagram }}/?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-instagram icon-link"></i></a>{% endif -%}
+                    {%- if page.linkedin %}<a title="Linkedin" rel="nofollow" href="{{ page.linkedin }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-linkedin icon-link"></i></a>{% endif -%}
+                    {%- if page.tumbler %}<a title="Tumblr" rel="nofollow" href="{{ page.tumblr }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-tumblr-square icon-link"></i></a>{% endif -%}
+					{%- if page.twitter %}<a title="Twitter" rel="nofollow" href="https://twitter.com/{{ page.twitter }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-twitter icon-link"></i></a>{% endif -%}
 					{%- if page.github %}<a title="Github" href="https://github.com/{{ page.github }}"><i class="fab fa-github icon-link"></i></a>{% endif -%}
-                    {%- if page.pinterest %}<a title="Pinterest" href="https://www.pinterest.com/{{ page.pinterest }}/"><i class="fab fa-pinterest icon-link"></i></a>{% endif -%}
-                    {%- if page.reddit %}<a title="Reddit" href="{{ page.reddit }}/"><i class="fab fa-reddit-alien icon-link"></i></a>{% endif -%}
+                    {%- if page.pinterest %}<a title="Pinterest" rel="nofollow" href="https://www.pinterest.com/{{ page.pinterest }}/"><i class="fab fa-pinterest icon-link"></i></a>{% endif -%}
+                    {%- if page.reddit %}<a title="Reddit" rel="nofollow" href="{{ page.reddit }}/"><i class="fab fa-reddit-alien icon-link"></i></a>{% endif -%}
                     {%- if page.wikipedia %}<a title="Wikipedia" href="{{ page.wikipedia }}"><i class="fab fa-wikipedia-w icon-link"></i></a>{% endif -%}
-                    {%- if page.youtube %}<a title="YouTube" rel="nofollow" href="{{ page.youtube }}"><i class="fab fa-youtube icon-link"></i></a>{% endif -%}
+                    {%- if page.youtube %}<a title="YouTube" rel="nofollow" href="{{ page.youtube }}?utm_source=vectorlogozone&utm_medium=referrer"><i class="fab fa-youtube icon-link"></i></a>{% endif -%}
 					{%- if prev_page %}<a class="btn btn-default btn-xs" href="{{prev_page}}" title="Previous set of logos"><i class="fa fa-caret-left"></i> Previous</a>{% endif -%}
 					{%- if next_page %}&nbsp;<a class="btn btn-default btn-xs" href="{{next_page}}" title="Next set of logos">Next <i class="fa fa-caret-right"></i></a>{% endif -%}
 				</div>
