social links in footer

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -66,6 +66,12 @@
         margin-left: 10px;
     }
 
+    .social-footer {
+        margin-left: 6px;
+        vertical-align:text-bottom;
+        width:18px;
+    }
+
 	</style>
 	<link rel="shortcut icon" href="/favicon.ico">
 	<script>if (window.top.location != window.location) { window.top.location.href = document.location.href; }</script>
