--- a/www/_includes/footer.html
+++ b/www/_includes/footer.html
@@ -1,4 +1,8 @@
 <footer class="hidden-print">
 	<p class="small text-muted text-center">
-		<a href="http://validator.w3.org/check/referer">Validate HTML</a>
+        Follow:
+        <a href="https://www.github.com/fileformat/vectorlogozone"><img alt="Github" src="/logos/github/github-tile.svg" class="social-footer"/></a>
+        <a href="https://www.facebook.com/vectorlogozone"><img alt="Facebook" src="/logos/facebook/facebook-tile.svg" class="social-footer"/></a>
+        <a href="https://www.twitter.com/vectorlogozone"><img alt="Twitter" src="/logos/twitter/twitter-tile.svg" class="social-footer"/></a>
+		| <a href="http://validator.w3.org/check/referer">Validate HTML</a>
 </footer>
