fixed html error in amp template

--- a/www/_layouts/amp.html
+++ b/www/_layouts/amp.html
@@ -50,7 +50,7 @@
 </head>
 <body>
     <div class="navbar">
-        <a class="home-link" href="/index.html" class="navbar-brand"><!--<amp-img src="https://www.vectorlogo.zone/favicon.svg" width="24" height="24" /> -->VectorLogoZone</a>
+        <a class="home-link navbar-brand" href="/index.html"><!--<amp-img src="https://www.vectorlogo.zone/favicon.svg" width="24" height="24" /> -->VectorLogoZone</a>
         {% assign without_logos = page.title | split: ' ' | size | minus: 1 %}
         <a class="search-link" href="/search.html?q={{page.title | split: ' ' | slice: 0, without_logos | join: ' '}}">Search</a>
     </div>
