--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -67,9 +67,10 @@
     }
 
     .social-footer {
-        margin-left: 6px;
-        vertical-align:text-bottom;
-        width:18px;
+        margin-left: 8px;
+        margin-right: 8px;
+        vertical-align:middle;
+        width:20px;
     }
     .copy2tip { display: none; }
 
