upgrade to bootstrap v4 (not complete)

--- a/www/_includes/meta.html
+++ b/www/_includes/meta.html
@@ -1,5 +1,6 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />
+	<!--<link href="/css/bootstrap.css" rel="stylesheet" type="text/css" />-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 	<link href="/css/fontawesome-all.css" rel="stylesheet" type="text/css" />
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,300,400italic,700,700italic' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
@@ -12,6 +13,26 @@
 		border: solid #ccc 1px;
 		margin: 10px;
 	}
+
+    .card-footer {
+        background-color: inherit;
+        border-top: 0;
+    }
+
+    .navbar-brand {
+        font-weight: bold;
+    }
+
+    .nav-link {
+        font-weight: bold;
+    }
+    .navbar-dark .navbar-nav .nav-link {
+        color: white;
+    }
+
+    h1 {
+        margin-top: 21px;
+    }
 
 	/* optional padding on visual inventory */
 	.padded { padding: 5px; }
