--- a/www/_includes/navbar.html
+++ b/www/_includes/navbar.html
@@ -1,20 +1,16 @@
-<nav class="navbar navbar-default navbar-static-top hidden-print">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="/" title=""><span class="hidden-xs">{{ site.title }}</span><span class="visible-xs-inline" title="{{site.title}}">{{site.title_short}}</span></a>
-		</div>
-		<div class="navbar-collapse collapse navbar-right">
-			<ul class="nav navbar-nav">
-				<li><a href="/logos/index.html">Logos</a></li>
-				<li><a href="/support/index.html">FAQ</a></li>
-                <li><a href="/report/index.html">Reports</a></li>
-				<li><a href="/search.html"><svg style="width: 1em; height: 1em; vertical-align:-.125em;" aria-hidden="true" data-prefix="fas" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path></svg></a></li>
-			</ul>
-		</div><!--/.navbar-collapse -->
-	</div>
+<nav class="navbar navbar-expand-sm navbar-dark navbar-static-top d-print-none" style="background-color:#2c3e50;">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="/" title="">{{ site.title }}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+    </div>
+    <div class="navbar-collapse collapse navbar-right" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <li class="nav-item"><a class="nav-link" href="/logos/index.html">Logos</a></li>
+            <li class="nav-item"><a class="nav-link" href="/support/index.html">FAQ</a></li>
+            <li class="nav-item"><a class="nav-link" href="/report/index.html">Reports</a></li>
+            <li class="nav-item"><a class="nav-link" href="/search.html"><svg style="width: 1em; height: 1em; vertical-align:-.125em;" aria-hidden="true" data-prefix="fas" data-icon="search" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" data-fa-i2svg=""><path fill="currentColor" d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"></path></svg></a></li>
+        </ul>
+    </div><!--/.navbar-collapse -->
 </nav>
