--- a/www/_includes/searchtab.html
+++ b/www/_includes/searchtab.html
@@ -1,18 +1,18 @@
 <ul class="nav nav-tabs">
 {% if page.url == '/search.html' %}
-    <li role="presentation" class="active"><a href="/search.html">VectorLogoZone</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link active" href="/search.html">VectorLogoZone</a></li>
 {% else %}
-    <li role="presentation"><a class="addparams" href="/search.html">VectorLogoZone</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/search.html">VectorLogoZone</a></li>
 {% endif %}
 {% if page.url == '/search-github.html' %}
-    <li role="presentation" class="active"><a href="/search-github.html">Github</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link active" href="/search-github.html">Github</a></li>
 {% else %}
-    <li role="presentation"><a class="addparams" href="/search-github.html">Github</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/search-github.html">Github</a></li>
 {% endif %}
 {% if page.url == '/search-other.html' %}
-    <li role="presentation" class="active"><a href="/search-other.html">Others</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link active" href="/search-other.html">Others</a></li>
 {% else %}
-    <li role="presentation"><a class="addparams" href="/search-other.html">Others</a></li>
+    <li role="presentation" class="nav-item"><a class="nav-link addparams" href="/search-other.html">Others</a></li>
 {% endif %}
 </ul>
 <p>&nbsp;</p>
