--- a/www/_layouts/default.html
+++ b/www/_layouts/default.html
@@ -9,7 +9,7 @@
 {% include navbar.html %}
 	<div class="container">
 		<div class="row">
-			<div class="col-md-10 col-md-offset-1">
+			<div class="col">
                 {%- if page.logohandle -%}
 				<div class="pull-right icon-link-header" style="padding-top:20px;">
                     {%- if page.guide %}<a title="Official Guidelines" href="{{ page.guide }}"><i class="fa fa-certificate icon-link"></i></a>{% endif -%}
