--- a/www/_includes/footer.html
+++ b/www/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="hidden-print">
+<footer class="d-print-none">
 	<p class="small text-muted text-center">
         Follow:
         <a href="https://www.github.com/VectorLogoZone/vectorlogozone"><img alt="Github" src="/logos/github/github-tile.svg" class="social-footer"/></a>
